Dictionary headers for mPDF, included mPDF-fork as normal dependency.

--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,6 @@
         "vendor-dir": "library/assets/php/vendors"
     },
 	"require": {
-		"mpdf/mpdf": "7.0.x-dev"
+		"blekerfeld/mpdf": "7.0.x-dev"
 	}
 }
