Columns in tables (#50), bugfixes (#52)

--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,9 @@
 
     RewriteEngine On
 
-    # Run everything else but real files through index.php
-    RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule ^(.*)$ index.php/?$1 [L]
+	# Run everything else but real files through index.php
+	RewriteCond %{REQUEST_FILENAME} !-d
+	RewriteCond %{REQUEST_FILENAME} !-f
+	RewriteRule ^(.*)$ index.php/?$1 [L]
+
+</IfModule>
